--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,18 @@ avatar: https://avatars0.githubusercontent.com/u/5529132?s=400&u=93e042dfd659b2e
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: andrew@mackenzie-serres.net
+  facebook: andrewdmackenzie
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
+  github: andrewdavidmackenzie
+  instagram: andrew_d_mackenzie
+  linkedin: andrewdmackenzie
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  twitter:
+  stackoverflow: users/573149/andrew-mackenzie
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
-
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
